# markdown-it-rust

./: Cargo.toml
src/common/: ruler.rs  utils.rs
src/generics/inline/: code_pair.rs
src/parser/: main.rs
src/parser/block/: mod.rs
src/parser/inline/: mod.rs
src/plugins/cmark/block/: code.rs  fence.rs
src/plugins/extra/: attrs.rs  footnote.rs  heading_anchors.rs  mod.rs  smartquotes.rs  syntect.rs  tables.rs
src/plugins/extra/footnote/: back_refs.rs  collect.rs  definitions.rs  inline.rs  references.rs
