[package]
name = "markdown-it"
version = "0.6.1"
authors = ["Alex Kocharin <alex@kocharin.ru>"]
description = "Rust port of popular markdown-it.js library."
documentation = "https://docs.rs/markdown-it"
homepage = "https://github.com/markdown-it-rust/markdown-it"
repository = "https://github.com/markdown-it-rust/markdown-it"
readme = "README.md"
keywords = ["markdown", "commonmark"]
license = "MIT"
categories = ["text-processing", "parsing"]
edition = "2024"

[lib]
name = "markdown_it"
path = "src/lib.rs"

[[bin]]
name = "markdown-it"
path = "src/bin.rs"
doc = false

[features]
default = ["linkify", "syntect"]
linkify = ["dep:linkify"]
syntect = ["dep:syntect"]

[dependencies]
argparse = "0.2.2"
const_format = "0.2.34"
derivative = "2.2.0"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
downcast-rs = "2.0.1"
entities = "1.0.1"
html-escape = "0.2.13"
linkify = { version = "0.10.0", optional = true }
mdurl = "0.3.1"
once_cell = "1.21.3"
readonly = "0.2.13"
regex = "1.11.1"
stacker = "0.1.21"
syntect = { version = "5.2.0", optional = true, default-features = false, features = ["default-fancy"] }
unicode-general-category = "1.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
